[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-party-pack-420"
version = "0.4.20"
description = "The Forge — Grok 4.20 Autonomous Agent OS"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Core
    "flask>=3.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",

    # AI Providers
    "xai-sdk>=0.1",
    "anthropic>=0.40",
    "openai>=1.50",

    # Tools
    "pillow>=10.0",
    "playwright>=1.40",
    "rich>=13.0",

    # Trading
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
trading = [
    "yfinance>=0.2",
    "robin_stocks>=3.0",
]

[project.scripts]
forge = "forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
