[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vortexchain"
version = "0.1.0"
description = "Topological OAM Cryptography Blockchain"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
vortexchain-demo = "vortexchain.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["vortexchain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
