[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vortexchain"
version = "0.1.0"
description = "Topological OAM Cryptography Blockchain"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "opencv-python>=4.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "python-socketio[client]>=5.10",
]

[project.scripts]
vortexchain-demo = "vortexchain.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["vortexchain"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
